RE-164 Cleanup of Codebase